[build-system]
requires = ["scikit_build_core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "genz-icp"
version = "0.3.0"
description = "GenZ-ICP LiDAR odometry core package without ROS runtime dependency"
readme = "README.md"
authors = [
    { name = "Daehan Lee" },
    { name = "Hyungtae Lim" },
    { name = "Soohee Han" },
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pybind11",
    "pydantic>=2",
    "pydantic-settings",
    "tqdm",
    "typer>=0.6.0",
]

[project.optional-dependencies]
test = ["pytest"]
visualizer = ["open3d>=0.16"]
all = ["open3d>=0.16", "PyYAML", "natsort", "pyquaternion", "ouster-sdk>=0.11", "polyscope>=2.4.0"]

[project.scripts]
genz_icp_pipeline = "genz_icp.tools.cmd:main"
genz_icp_dump_config = "genz_icp.config.parser:write_config"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.verbose = false
cmake.minimum-version = "3.16"
editable.mode = "redirect"
editable.rebuild = true
editable.verbose = true
wheel.install-dir = "genz_icp/pybind/"

[tool.pytest.ini_options]
testpaths = ["tests"]
